# Image2ascii

./: CMakeLists.txt  README.md  argument-parser.cpp  argument-parser.h  main.cpp
images/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt  image2ascii  output1.txt
